--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #f0e5cc;
+    
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+
+}
+header {
+    color: #3b3b3b;
+    position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header .logo {
+    width: 100px;
+    position: absolute;
+    left: 100px;
+    
+    transition: opacity 0.5s ease-in;
+    
+    
+}
+header .logo:hover{
+    opacity: 0.8;
+}
+
+
+
+header ul.nav{
+    font-size: 18px;
+    position: relative;
+    margin-right: 125px;
+    margin-top: 55px;
+    list-style: none;
+    float: right;
+}
+
+
+header ul.nav li {
+    display: inline;
+    margin-left: 25px;
+    cursor: pointer;
+    transition: opacity 500ms ease-in;
+}
+header ul.nav li:hover{
+    opacity: 0.7;
+}
+
+header .presentation{
+    position: absolute;
+    border-radius: 12%;
+    background: url(./img/presentation.jpg);
+    width: 100%;
+    height: 700px;
+    margin-top: 130px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: #f0e5cc;
+
+}
+
+header .presentation::after{
+    position: absolute;
+    content: "Лучшие моменты передаются фотографией";
+    top: 130px;
+    left: 150px;
+    width: 250px;
+    font-size: 40px;
+    font-weight: 600;
+    color: #fff;
+}
+
+
+footer {
+    position: absolute;
+    top: 100%;
+    left: 50%;
 }
