--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Slab&display=swap');
+@font-face {
+    font-family: Behrens KursivC;
+    src: url('./fonts/Behrens\ KursivC/BehrensKursivC.ttf');
+}
 * {
     margin: 0;
     padding: 0;
@@ -19,13 +24,24 @@ header .logo {
     width: 100px;
     position: absolute;
     left: 100px;
-    
+    cursor: pointer;
     transition: opacity 0.5s ease-in;
     
     
 }
 header .logo:hover{
     opacity: 0.8;
+}
+
+header .favorite_moments{
+    color: #393939;
+    font-size: 22px;
+    position: absolute;
+    left: 11%;
+    padding-top: 60px;
+    font-family: Behrens KursivC;
+    cursor: pointer;
+
 }
 
 
