--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ header .presentation::after{
 
 
 .slider{
-    
+    overflow: hidden;
     margin: 30px auto;
     
 }
@@ -159,6 +159,7 @@ header .presentation::after{
     border-radius: 2%;
     height: 800px;
     width: 1200px;
+    
 }
 
 #slider-line{
@@ -166,11 +167,23 @@ header .presentation::after{
     position: relative;
     height: 800px;
     width: 4800px;
+    left: 0;
+    transition: all ease 1s;
     
 }
-button {
-    width: 100px;
-    background-color: rgb(132, 0, 248);
+button{
+    position: relative;
+    bottom: 80px;
+    width: 20px;
+    height: 20px;
+    border: 0px;
+    margin-left: 10px;
+    background-color: #fff;
+    border-radius: 90%;
+    transition: all 2s ease-in;
+}
+button:hover{
+    background-color: black;
 }
 
 footer {
