--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ header .presentation::after{
 .our_job {
     border-radius: 3%;
     
-    height: 4000px;
+    height: 900px;
     
     margin-top: 50px;
     text-align: center;
@@ -116,7 +116,7 @@ header .presentation::after{
 .active {
     background-color: red;
     width: 70px;
-    height: 3px;
+    height: 1px;
 
 }
 .home.active{
@@ -183,11 +183,11 @@ button{
     transition: all 2s ease-in;
 }
 button:hover{
-    background-color: black;
+    background-color: rgb(53, 49, 49);
 }
 
 footer {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 10px;
 }
 
