--- a/src/index.css
+++ b/src/index.css
@@ -172,11 +172,98 @@ header .presentation::after{
     
 }
 
+.slider-prev{
+    background-color: black;
+    transition: all 1s ease-in;
+}
+.slider-prev:hover{
+    background-color: white;
+}
+
+
+
+.slider-next{
+    background: white;
+    transition: all 1s ease-in;
+}
+
+.slider-next:hover{
+    background: black
+}
 .feedback{
+    width: 1200px;
     margin-top: 50px;
     text-align: center;
     font-size: 45px;
+    
 }
+.feedback_img{
+    width: 1200px;
+    margin-top: 50px;
+    transition: all 0.5s ease-in-out;
+    border-radius: 2%;
+}
+
+.feedback_container{
+    position: relative;
+    cursor: pointer;
+}
+
+.feedback_container > img {
+    width: 100%;
+    height: 100%;
+    opacity: 0.65;
+
+}
+
+.feedback_container > img:hover{
+    opacity: 0.82;
+    border-radius: 4%;
+    
+}
+
+/* .feedback_container::after{
+    position: absolute;
+    content: "Нам доверяют";
+    top: 280px;
+    left: 60px;
+    color: #fff;
+    width: 300px;
+    font-size: 50px;
+    font-weight: 700;
+} */
+
+.trust_us {
+    padding: 0;
+    margin: 0;
+    color: white;
+    text-align: center;
+    width: 250px;
+    position: absolute;
+    top: 310px;
+    left: 5%;
+    font-size: 49px;
+    transition: 5s ease;
+    font-weight: 400;
+    background: none;
+    opacity: 0.83;
+    transition: 0.5s all ease;
+    
+}
+
+
+.trust_us:hover{
+    opacity: 1;
+    font-size: 120px;
+    
+    
+
+     
+}
+
+
+
+
 button{
     position: relative;
     bottom: 80px;
